--- a/src/di/package.json
+++ b/src/di/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.6",
   "description": "Dependency Injection",
   "main": "dist/index.js",
-  "private": false,
+  "publishConfig": {"access": "public"},
   "scripts": {
     "test": "jest"
   },
@@ -21,5 +21,5 @@
     "url": "https://github.com/zcodeapp/msexpandable/issues"
   },
   "homepage": "https://github.com/zcodeapp/msexpandable#readme",
-  "gitHead": "f5ac37ad4450cb08d104d20eafb8d0cc9fafdb17"
+  "gitHead": "93057201c54b28188e1cbc32ee9a198a9e75cf4e"
 }
