--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,7 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.0.8"
+  "version": "independent",
+  "packages": [
+    "src/*"
+  ],
+  "npmClient": "npm"
 }
