--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "src/*"
   ],
   "scripts": {
-    "test": "jest",
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "test": "lerna run test"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
   "homepage": "https://github.com/zcodeapp/msexpandable#readme",
   "dependencies": {
     "lerna": "^8.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
