--- a/src/interfaces/package.json
+++ b/src/interfaces/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "echo \"Interfaces only\""
   },
   "publishConfig": {
     "access": "public"
@@ -23,5 +24,8 @@
     "url": "https://github.com/zcodeapp/msexpandable/issues"
   },
   "homepage": "https://github.com/zcodeapp/msexpandable#readme",
-  "gitHead": "930858ba01594b087e836e3a5b06787250c62b37"
+  "gitHead": "930858ba01594b087e836e3a5b06787250c62b37",
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  }
 }
