--- a/docker/nodejs/Dockerfile
+++ b/docker/nodejs/Dockerfile
@@ -1,16 +1,23 @@
-FROM node
+FROM node:18
 
-ARG USERID=$UID
 ARG NPM_TOKEN=$NPM_TOKEN
-ENV USERID=$USERID
 ENV NPM_TOKEN=$NPM_TOKEN
+ENV NODE_PATH=/var/node_modules
+ENV PATH="$PATH:/app/node_modules/jest/bin"
+ENV NODE_PATH="/var/node_modules"
 
-RUN if ! id -u $USERID > /dev/null 2>&1; then \
-        useradd -u $USERID -ms /bin/bash node$USERID; \
-    fi
+RUN apt-get update && apt-get install -y build-essential
+RUN npm install -g npm
+RUN chown node:node -R /usr/local/lib/node_modules \
+    && chown node:node -R /usr/local/bin \
+    && npm cache clean -f
+
+USER $USERNAME
 
 WORKDIR /app
 
 ENTRYPOINT ["docker-entrypoint.sh"]
+
+EXPOSE 9229
 
 CMD [ "node" ]
