--- a/src/di/package.json
+++ b/src/di/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zcodeapp-packages/di",
-  "version": "0.0.9",
+  "name": "@zcodeapp/di",
+  "version": "0.0.2",
   "description": "Dependency Injection",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "jest",
+    "test": "node --inspect=0.0.0.0:9229 -r ts-node/register /var/node_modules/jest/bin/jest.js tests",
     "build": "tsc"
   },
   "repository": {
@@ -26,21 +26,12 @@
   },
   "homepage": "https://github.com/zcodeapp/msexpandable#readme",
   "gitHead": "930858ba01594b087e836e3a5b06787250c62b37",
-  "dependencies": {
-    "@zcodeapp-packages/interfaces": "^0.0.3"
-  },
   "devDependencies": {
     "@types/jest": "^29.5.11",
-    "@zcodeapp-packages/utils": "^0.0.1",
+    "@zcodeapp/interfaces": "^0.0.1",
+    "@zcodeapp/utils": "^0.0.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testMatch": [
-      "<rootDir>/tests/**/*.test.[jt]s?(x)"
-    ]
   }
 }
