--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@zcodeapp-packages/utils",
+  "name": "@zcodeapp/utils",
   "version": "0.0.2",
-  "description": "Dependency Injection",
+  "description": "Utils for reuse code",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -26,11 +26,9 @@
   },
   "homepage": "https://github.com/zcodeapp/msexpandable#readme",
   "gitHead": "930858ba01594b087e836e3a5b06787250c62b37",
-  "dependencies": {
-    "@zcodeapp-packages/interfaces": "^0.0.3"
-  },
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@zcodeapp/interfaces": "^0.0.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
@@ -38,6 +36,8 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "testMatch": ["<rootDir>/tests/**/*.test.[jt]s?(x)"]
+    "testMatch": [
+      "<rootDir>/tests/**/*.test.[jt]s?(x)"
+    ]
   }
 }
