--- a/src/di/tsconfig.json
+++ b/src/di/tsconfig.json
@@ -1,18 +1,7 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "sourceMap": true,
     "outDir": "./dist"
-  },
-  "editorOptions": {
-      "indent": "spaces",
-      "tabSize": 2,
-      "insertSpaces": true
   },
   "include": [
     "src/**/*",
