--- a/src/utils/tsconfig.json
+++ b/src/utils/tsconfig.json
@@ -1,12 +1,14 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "compilerOptions": {
-      "outDir": "./dist"
-    },
-    "include": [
-      "src/**/*"
-    ],
-    "exclude": [
-      "tests/**/*"
-    ]
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "./dist"
+  },
+  "include": [
+    "src/**/*",
+    "tests/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
