--- a/src/di/tsconfig.json
+++ b/src/di/tsconfig.json
@@ -4,10 +4,10 @@
     "outDir": "./dist"
   },
   "include": [
-    "src/**/*",
-    "tests/**/*"
+    "src/**/*"
   ],
   "exclude": [
+    "tests/**/*",
     "node_modules",
     "dist"
   ],
