--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -8,8 +8,9 @@
     "access": "public"
   },
   "scripts": {
-    "test": "jest",
-    "build": "tsc"
+    "test": "node --inspect=0.0.0.0:9229 -r ts-node/register /app/node_modules/jest/bin/jest.js tests",
+    "build": "tsc && npm run eslint",
+    "eslint": "eslint --ext .ts ."
   },
   "repository": {
     "type": "git",
@@ -28,16 +29,12 @@
   "gitHead": "930858ba01594b087e836e3a5b06787250c62b37",
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "@zcodeapp/interfaces": "^0.0.1",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testMatch": [
-      "<rootDir>/tests/**/*.test.[jt]s?(x)"
-    ]
   }
 }
