--- a/src/di/package.json
+++ b/src/di/package.json
@@ -28,7 +28,9 @@
   "homepage": "https://github.com/zcodeapp/msexpandable#readme",
   "gitHead": "930858ba01594b087e836e3a5b06787250c62b37",
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
     "@types/jest": "^29.5.11",
+    "@types/reflect-metadata": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@zcodeapp/interfaces": "^0.1.0",
@@ -37,5 +39,9 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "crypto-js": "^4.2.0",
+    "reflect-metadata": "^0.2.1"
   }
 }
