--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,9 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "lib": ["ES2015", "DOM"]
+        "lib": ["ES2015", "DOM"],
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "editorOptions": {
         "indent": "spaces",
