--- a/src/di/package.json
+++ b/src/di/package.json
@@ -8,8 +8,8 @@
     "access": "public"
   },
   "scripts": {
-    "test": "node --inspect=0.0.0.0:9229 -r ts-node/register /app/node_modules/jest/bin/jest.js tests",
-    "build": "tsc && npm run eslint",
+    "test": "npm run build && node --inspect=0.0.0.0:9229 -r ts-node/register /app/node_modules/jest/bin/jest.js tests --runInBand",
+    "build": "rm -rf dist && tsc && npm run eslint",
     "eslint": "eslint --ext .ts ."
   },
   "repository": {
@@ -34,7 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@zcodeapp/interfaces": "^0.1.0",
-    "@zcodeapp/utils": "^0.0.1",
+    "@zcodeapp/utils": "^0.1.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
