--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
         "module": "CommonJS",
-        "target": "ES5",
+        "target": "ES6",
         "declaration": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
-        "strict": true,
+        "strict": false,
         "skipLibCheck": true,
         "lib": ["ES2015", "DOM"],
         "experimentalDecorators": true,
