--- a/src/di/package.json
+++ b/src/di/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "lodash.clonedeep": "^4.5.0",
     "reflect-metadata": "^0.2.1"
   }
 }
