--- a/src/logger/package.json
+++ b/src/logger/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@zcodeapp/di",
+  "name": "@zcodeapp/logger",
   "version": "0.1.0",
-  "description": "Dependency Injection",
+  "description": "Logger for application",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -17,8 +17,7 @@
     "url": "git+git@github.com:zcodeapp/msexpandable.git"
   },
   "keywords": [
-    "dependency",
-    "injection"
+    "logger"
   ],
   "author": "Joao Moraes <joaomoraesbr@gmail.com>",
   "license": "ISC",
@@ -26,11 +25,8 @@
     "url": "https://github.com/zcodeapp/msexpandable/issues"
   },
   "homepage": "https://github.com/zcodeapp/msexpandable#readme",
-  "gitHead": "930858ba01594b087e836e3a5b06787250c62b37",
   "devDependencies": {
-    "@types/crypto-js": "^4.2.1",
     "@types/jest": "^29.5.11",
-    "@types/reflect-metadata": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@zcodeapp/interfaces": "^0.1.0",
@@ -39,11 +35,5 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "@zcodeapp/logger": "^0.1.0",
-    "crypto-js": "^4.2.0",
-    "lodash.clonedeep": "^4.5.0",
-    "reflect-metadata": "^0.2.1"
   }
 }
