--- a/.github/workflows/logger-workflow.yml
+++ b/.github/workflows/logger-workflow.yml
@@ -25,7 +25,7 @@ jobs:
         node-version: '18'
 
     - name: Install Dependencies
-      run: npm install
+      run: npm install && ls -la node_modules/@zcodeapp
       working-directory: ./src/logger
 
     - name: Run Build
