--- a/.github/workflows/logger-workflow.yml
+++ b/.github/workflows/logger-workflow.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Dependencies
-      run: npm install
+      run: npm install && ls -la && ls -la node_modules/@zcodeapp
       working-directory: ./
 
     - name: Run Build
