--- a/.github/workflows/logger-workflow.yml
+++ b/.github/workflows/logger-workflow.yml
@@ -19,9 +19,13 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Install Dependencies
-      run: npm install && ls -la && ls -la node_modules/@zcodeapp
+    - name: Remove package.json root
+      run: rm package.json package-lock.json
       working-directory: ./
+
+    - name: Install Dependencies
+      run: npm install
+      working-directory: ./src/logger
 
     - name: Run Build
       run: npm run build
