--- a/src/logger/package.json
+++ b/src/logger/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
