--- a/src/logger/package.json
+++ b/src/logger/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "test": "npm run build && node --inspect=0.0.0.0:9229 -r ts-node/register /app/node_modules/jest/bin/jest.js tests --runInBand",
+    "test-ci": "npx jest --coverage --runInBand",
     "build": "rm -rf dist && tsc && npm run eslint",
     "eslint": "eslint --ext .ts ."
   },
