--- a/.github/workflows/logger-workflow.yml
+++ b/.github/workflows/logger-workflow.yml
@@ -39,4 +39,4 @@ jobs:
       run: |
         curl -Os https://uploader.codecov.io/latest/linux/codecov
         chmod +x codecov
-        ./codecov -t ${{ secrets.CODECOV_TOKEN }} -s ./src/logger/coverage
+        ./codecov -t ${{ secrets.CODECOV_TOKEN }} -s ./src/logger/coverage -r zcodeapp/logger
