--- a/.github/workflows/logger-workflow.yml
+++ b/.github/workflows/logger-workflow.yml
@@ -39,6 +39,9 @@ jobs:
       uses: codecov/codecov-action@v3
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      working-directory: ./src/logger
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        directory: ./src/logger/coverage
+
 
 
