--- a/.github/workflows/logger-workflow.yml
+++ b/.github/workflows/logger-workflow.yml
@@ -38,20 +38,9 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
-        file: ./src/logger/coverage/clover.xml
+        file: ./src/logger/coverage/coverage-final.json
         flags: unittests
         name: logger
         fail_ci_if_error: true
         verbose: true
-
-    # - name: Upload coverage reports to Codecov
-    #   uses: codecov/codecov-action@v3
-    #   env:
-    #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-    #   with:
-    #     token: ${{ secrets.CODECOV_TOKEN }}
-    #     directory: ./src/logger/coverage
-    #     flags: logger
-
-
 
