--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -30,6 +30,7 @@
   "gitHead": "930858ba01594b087e836e3a5b06787250c62b37",
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@types/crypto-js": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@zcodeapp/interfaces": "^0.3.2",
@@ -37,5 +38,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "crypto-js": "^4.2.0"
   }
 }
