add branch main for github actions

--- a/.github/workflows/cache-workflow.yml
+++ b/.github/workflows/cache-workflow.yml
@@ -2,9 +2,13 @@ name: Cache CI
 
 on:
   push:
+    branches:
+      - main
     paths:
       - 'src/cache/**'
   pull_request:
+    branches:
+      - main
     paths:
       - 'src/cache/**'
 
