--- a/.github/workflows/configuration-workflow.yml
+++ b/.github/workflows/configuration-workflow.yml
@@ -2,9 +2,13 @@ name: Configuration CI
 
 on:
   push:
+    branches:
+      - main
     paths:
       - 'src/configuration/**'
   pull_request:
+    branches:
+      - main
     paths:
       - 'src/configuration/**'
 
