--- a/.github/workflows/di-workflow.yml
+++ b/.github/workflows/di-workflow.yml
@@ -2,9 +2,13 @@ name: Di CI
 
 on:
   push:
+    branches:
+      - main
     paths:
       - 'src/di/**'
   pull_request:
+    branches:
+      - main
     paths:
       - 'src/di/**'
 
