--- a/.github/workflows/interfaces-workflow.yml
+++ b/.github/workflows/interfaces-workflow.yml
@@ -2,9 +2,13 @@ name: Interfaces CI
 
 on:
   push:
+    branches:
+      - main
     paths:
       - 'src/interfaces/**'
   pull_request:
+    branches:
+      - main
     paths:
       - 'src/interfaces/**'
 
