update tests and add workflow controller

--- a/codecov.yml
+++ b/codecov.yml
@@ -23,3 +23,6 @@ flag_management:
     - name: cache
       paths: 
       - src/cache
+    - name: controller
+      paths: 
+      - src/controller
