add test for logger instante auto inside di

--- a/src/di/package.json
+++ b/src/di/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "npm run build && node --inspect=0.0.0.0:9229 -r ts-node/register /app/node_modules/jest/bin/jest.js tests --runInBand",
+    "test": "npm run build && node --inspect=0.0.0.0:9229 -r ts-node/register /app/node_modules/jest/bin/jest.js --coverage --runInBand tests",
     "test-ci": "npx jest --coverage --runInBand",
     "build": "rm -rf dist && tsc && npm run eslint",
     "eslint": "eslint --ext .ts ."
