--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,11 +1,12 @@
-
 name: "CodeQL"
 
 on:
   push:
     branches: [ "main" ]
+    paths: ['src/**']
   pull_request:
     branches: [ "main" ]
+    paths: ['src/**']
   schedule:
     - cron: '0 0 * * 0'
 
@@ -32,6 +33,7 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}
+        config-file: ./.github/codeql/codeql-config.yml
 
     - name: Autobuild
       uses: github/codeql-action/autobuild@v3
