--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -40,6 +40,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0"
+    "crypto-js": "^4.2.0",
+    "uuid": "^9.0.1"
   }
 }
