--- a/.github/workflows/configuration-workflow.yml
+++ b/.github/workflows/configuration-workflow.yml
@@ -13,12 +13,11 @@ on:
       - 'src/configuration/**'
 
 jobs:
-  build-and-test:
-    name: Build and Test
+  build:
+    name: Build
     runs-on: ubuntu-latest
     container:
       image: node:18
-
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
@@ -35,9 +34,41 @@ jobs:
       run: npm run build
       working-directory: ./src/configuration
 
-    - name: Run Tests and Collect Coverage
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: build
+    container:
+      image: node:18
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Reuse Built Files
+      uses: actions/download-artifact@v2
+      with:
+        name: build-artifacts
+        path: ./src/configuration
+
+    - name: Run Tests
       run: npm run test-ci
       working-directory: ./src/configuration
+
+  codecov:
+    name: Codecov
+    runs-on: ubuntu-latest
+    needs: test
+    container:
+      image: node:18
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Reuse Built Files
+      uses: actions/download-artifact@v2
+      with:
+        name: build-artifacts
+        path: ./src/configuration
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
