--- a/.github/workflows/configuration-workflow.yml
+++ b/.github/workflows/configuration-workflow.yml
@@ -20,7 +20,7 @@ jobs:
       image: node:18
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Remove package.json root
       run: rm package.json package-lock.json
@@ -33,6 +33,10 @@ jobs:
     - name: Run Build
       run: npm run build
       working-directory: ./src/configuration
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: ./src/configuration
 
   test:
     name: Test
@@ -42,10 +46,10 @@ jobs:
       image: node:18
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Reuse Built Files
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
         name: build-artifacts
         path: ./src/configuration
@@ -62,7 +66,7 @@ jobs:
       image: node:18
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Reuse Built Files
       uses: actions/download-artifact@v2
