--- a/.github/workflows/configuration-workflow.yml
+++ b/.github/workflows/configuration-workflow.yml
@@ -33,10 +33,12 @@ jobs:
     - name: Run Build
       run: npm run build
       working-directory: ./src/configuration
-      - uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: ./src/configuration
+
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-artifacts
+        path: ./src/configuration
 
   test:
     name: Test
