--- a/.github/workflows/configuration-workflow.yml
+++ b/.github/workflows/configuration-workflow.yml
@@ -34,6 +34,10 @@ jobs:
       run: npm run build
       working-directory: ./src/configuration
 
+    - name: Jest Location
+      run: which jest && which node
+      working-directory: ./src/configuration
+
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
