--- a/.github/workflows/configuration-workflow.yml
+++ b/.github/workflows/configuration-workflow.yml
@@ -27,20 +27,22 @@ jobs:
       working-directory: ./
 
     - name: Install Dependencies
-      run: npm install --prefix .
+      run: npm install
       working-directory: ./src/configuration
 
     - name: Run Build
       run: npm run build
       working-directory: ./src/configuration
 
+    - name: Jest Location
+      run: which npx
+      working-directory: ./src/configuration
+
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: build-artifacts
-        path: |
-          ./src/configuration
-          ./src/configuration/node_modules
+        path: ./src/configuration
 
   test:
     name: Test
@@ -56,9 +58,11 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: build-artifacts
-        path: |
-          ./src/configuration
-          ./src/configuration/node_modules
+        path: ./src/configuration
+
+    - name: Print Working Directory
+      run: pwd && ls -la node_modules
+      working-directory: ./src/configuration
 
     - name: Run Tests
       run: npm run test-ci
@@ -78,9 +82,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: build-artifacts
-        path: |
-          ./src/configuration
-          ./src/configuration/node_modules
+        path: ./src/configuration
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
