--- a/.github/workflows/configuration-workflow.yml
+++ b/.github/workflows/configuration-workflow.yml
@@ -57,7 +57,7 @@ jobs:
         path: ./src/configuration
 
     - name: Run Tests
-      run: node -r ts-node/register ./node_modules/jest/bin/jest.js tests --coverage --runInBand
+      run: npm run test-ci
       working-directory: ./src/configuration
 
   codecov:
