--- a/.github/workflows/configuration-workflow.yml
+++ b/.github/workflows/configuration-workflow.yml
@@ -54,6 +54,10 @@ jobs:
       run: rm package.json package-lock.json
       working-directory: ./
 
+    - name: Install Dependencies
+      run: npm install
+      working-directory: ./src/configuration
+
     - name: Reuse Built Files
       uses: actions/download-artifact@v4
       with:
